syntax = "proto3";

package auth_service;

message AuthUser {
    string user_id = 1;
    string username = 2;
    string email = 3;
    string role = 4;
    string avatar = 5;
}

enum CodeType {
    REGISTRATION = 0;
    PASSWORD_RESET = 1;
}

message CodeRequest {
    string email = 1;
    CodeType type = 2;
}

message CodeResponse {
}

message PreloginRequest {
    string redirect_url = 1;
}

message PreloginResponse {
    string state = 1;
}

enum LoginType {
    STANDARD = 0;
    GITHUB = 1;
    SSE_MARKET = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
    string code = 3;
    LoginType type = 4;
    string state = 5;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    string redirect_url = 3;
}

message LogoutRequest {
    string user_id = 1;
}

message LogoutResponse {
}

message InfoRequest {
    string user_id = 1;
}

message InfoResponse {
    AuthUser user = 1;
}

message RefreshRequest {
    string refresh_token = 1;
}

message RefreshResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 4;
    string code = 5;
}

message RegisterResponse {
    string refresh_token = 1;
    string redirect_url = 2;
}

message UpdateProfileRequest {
    string user_id = 1;
    string avatar = 2;
    string username = 3;
}

message UpdateProfileResponse {
    AuthUser user = 1;
}

// ============================================================================
// Public User Info (不含 email，用于协作者管理等场景)
// ============================================================================

message PublicUserInfo {
    uint32 id = 1;
    string username = 2;
    string avatar = 3;
}

// 用户搜索请求
message SearchUsersRequest {
    string keyword = 1;           // 搜索关键词（用户名模糊匹配）
    uint32 exclude_user_id = 2;   // 排除的用户ID（通常是当前用户）
    int32 page = 3;               // 页码，从1开始
    int32 page_size = 4;          // 每页数量，默认10
}

message SearchUsersResponse {
    repeated PublicUserInfo users = 1;
    int64 total = 2;
}

// 批量获取用户信息请求
message GetUsersByIdsRequest {
    repeated uint32 user_ids = 1;
}

message GetUsersByIdsResponse {
    repeated PublicUserInfo users = 1;
}

service AuthService {
    rpc Prelogin (PreloginRequest) returns (PreloginResponse);
    rpc SendCode (CodeRequest) returns (CodeResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc GetUserInfo (InfoRequest) returns (InfoResponse);
    rpc RefreshToken (RefreshRequest) returns (RefreshResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
    
    // 用户搜索和批量获取
    rpc SearchUsers (SearchUsersRequest) returns (SearchUsersResponse);
    rpc GetUsersByIds (GetUsersByIdsRequest) returns (GetUsersByIdsResponse);
}

